<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".views.auth.RegistroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_registro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_formulario"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|center"
            android:text="@string/registrate"
            android:textColor="@color/text_primary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="start|center"
            android:text="@string/mensaje2"
            android:textColor="@color/text_secondary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_texto">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backgroundDark"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/ic_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:digits="abcdefghijklmnopqrstuvwxyz . ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    android:textSize="16sp"
                    android:autofillHints="Usaurio" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_texto">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backgroundDark"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    android:textSize="16sp"
                    android:autofillHints="Email" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_texto">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backgroundDark"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:hint="@string/celular"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    android:textSize="16sp"
                    android:autofillHints="Celular" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_texto">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backgroundDark"
                android:contentDescription="@string/app_name"
                android:padding="9dp"
                android:src="@drawable/ic_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/icon_primary">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    android:textSize="16sp"
                    android:autofillHints="Password" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/terminos_condiciones"
            android:textColor="@color/colorLink"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_principal"
                android:fontFamily="@font/poppins"
                android:text="@string/Registrarse"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/Con_cuenta"
                android:textColor="@color/text_secondary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:onClick="register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/ingresar"
                android:textColor="@color/text_primary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>