<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ver_producto_ll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/producto_imagen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/accent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>


            <TextView
                android:id="@+id/producto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/producto"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/producto_moneda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/text_primary"
                    android:fontFamily="@font/poppins"
                    android:text="@string/s"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/producto_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/_precio"
                    android:textSize="16sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/agregar_carrito"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:text="@string/_carr"
                    android:textColor="@color/primaryDark"
                    android:background="@drawable/btn_shop"/>

                <LinearLayout
                    android:id="@+id/quantity_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/btn_shop"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/quantity_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="5dp"
                        android:text="@string/separacion"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/_1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/quantity_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="5dp"
                        android:text="@string/aumentar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
