<?xml version="1.0" encoding="UTF-8" ?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    android:elevation="5dp"
    android:transitionName="cardViewTransition">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_cerrar2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="52dp"
            android:background="@color/background"
            android:padding="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qrImageView"
                android:layout_width="323dp"
                android:layout_height="391dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/qr" />

            <TextView
                android:id="@+id/total_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/monto_total_s_0_00"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_principal"
                android:text="@string/descargar"
                android:textColor="@color/white" />


        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>